# Basic-ChatBot-Using-Langchain-New-Version

./: main.py  pyproject.toml  requirements.txt
langchain_new_version/agent/: basic_agent.ipynb
langchain_new_version/chatbot/: free_bot.ipynb  paid_bot.ipynb
langchain_new_version/messages/: llm_messages.ipynb
langchain_new_version/middleware/: middleware.ipynb
langchain_new_version/rag_based_chatbot/: rag_chatbot.ipynb
langchain_new_version/streaming_batching/: batch.ipynb  streaming.ipynb
langchain_new_version/structure_output/: pydantic.ipynb  type_dict.ipynb
langchain_new_version/tools/: llm_with_tools.ipynb
